# Volcano

./: Volcano.cabal  gen.hs  search.lhs  spec.hs
src/Test/: Volcano.hs
src/Test/Volcano/: Data.hs  Search.hs
src/Test/Volcano/Parse/: Haskell.hs
stash/: gen.hs  spec.hs
